Adding APIs into js

--- a/index2.html
+++ b/index2.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     Testing APIs
-    <button id="btn">Click here</button>
+    <button id="btn">Fortune Telling API</button>
     <div id="test"></div>
+    <button id="btnTwo">Giphy API</button>
+    <div id="testTwo"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/js/script.js"></script>
