finished basic html structure

--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
          
          
         </div>
-        <div> <button type="submit" class="btn btn-primary mb-2">Submit</button></div>
+        <div> <button type="submit" class="btn btn-primary mb-2" id="btn">Submit</button></div>
       </form>
 
       <footer>  </footer>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="assets/js/script.js"></script>
 </body>
 </html>
