--- a/index2.html
+++ b/index2.html
@@ -31,7 +31,7 @@
           <div class="col-4">
             2 of 3
           </div>
-          <div class="col-4">
+          <div class="col-4" id="color">
             3 of 3
           </div>
         </div>
