added new js file, added local storage

--- a/index1.html
+++ b/index1.html
@@ -17,26 +17,26 @@
         </div>
         <div class="form-group">
           <label for="exampleFormControlSelect1">Choose your star sign</label>
-          <select class="form-control" id="exampleFormControlSelect1">
+          <select class="form-control" id="starSigns">
             
-            <option>Aries</option>
-            <option>Taurus</option>
-            <option>Gemini</option>
-            <option>Cancer</option>
-            <option>Leo</option>
-            <option>Virgo</option>
-            <option>Libra</option>
-            <option>Scorpio</option>
-            <option>Sagittarius</option>
-            <option>Capricorn</option>
-            <option>Aquarius</option>
-            <option>Pisces</option>
+            <option value="Aries">Aries</option>
+            <option value="Taurus">Taurus</option>
+            <option value="Gemini">Gemini</option>
+            <option value="Cancer">Cancer</option>
+            <option value="Leo">Leo</option>
+            <option value="Virgo">Virgo</option>
+            <option value="Libra">Libra</option>
+            <option value="Scorpio">Scorpio</option>
+            <option value="Sagittarius">Sagittarius</option>
+            <option value="Capricorn">Capricorn</option>
+            <option value="Aquarius">Aquarius</option>
+            <option value="Pisces">Pisces</option>
           </select>
         </div>
     </form>
     <div> <button type="submit" class="btn btn-primary mb-2" id="btn">Submit</button></div>
     <footer> This is a footer </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script1.js"></script>
 </body>
 </html>
