--- a/index1.html
+++ b/index1.html
@@ -2,14 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" href="assets/css/style.css">
+  </head>
+
 <body>
     <header class="container-fluid">It's written in the stars</header>
+    <div id ="image1">
+      <img src="https://bestanimations.com/media/stars/889307148tumblr_p3fcd7FuDe1tsnpcpo1_500.gif" alt="">
+    </div>
+    <div id ="image2">
+      <img src="https://bestanimations.com/media/stars/889307148tumblr_p3fcd7FuDe1tsnpcpo1_500.gif" alt="">
+
+    </div>
+
     <form class="container" id="form">
         <div class="form-group">
           <label for="exampleFormControlInput1">Enter Name</label>
@@ -33,8 +42,9 @@
             <option value="Pisces">Pisces</option>
           </select>
         </div>
+        <div id="button"> <button type="submit" class="btn btn-primary mb-2" id="btn">Submit</button></div>
     </form>
-    <div> <button type="submit" class="btn btn-primary mb-2" id="btn">Submit</button></div>
+
     <footer> This is a footer </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/js/script1.js"></script>
