--- a/index1.html
+++ b/index1.html
@@ -6,17 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
 
 <body>
     <header class="container-fluid">It's written in the stars</header>
-    <div id ="image1">
-      <img src="https://bestanimations.com/media/stars/889307148tumblr_p3fcd7FuDe1tsnpcpo1_500.gif" alt="">
-    </div>
-    <div id ="image2">
-      <img src="https://bestanimations.com/media/stars/889307148tumblr_p3fcd7FuDe1tsnpcpo1_500.gif" alt="">
-
+    <div id='stars'></div>
+    <div id='stars2'></div>
+    <div id='stars3'></div>
+    <div id='title'>
+      <span>
+        WRITTEN IN THE
+      </span>
+      <br>
+      <span>
+        STARS
+      </span>
     </div>
 
     <form class="container" id="form">
