--- a/index1.html
+++ b/index1.html
@@ -6,25 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
 
 <body>
-    <header class="container-fluid">It's written in the stars</header>
-    <div id='stars'></div>
-    <div id='stars2'></div>
-    <div id='stars3'></div>
-    <div id='title'>
-      <span>
-        WRITTEN IN THE
-      </span>
-      <br>
-      <span>
-        STARS
-      </span>
-    </div>
-
+  <header class="container-fluid">It's written in the stars</header>
+  <div class="background-container">
+    <img class="moon2" src="assets/images/moon-png-44673.png" alt="">
+    <div class="stars"></div>
+    <div class="twinkling"></div>
+    <div class="clouds"></div>
+  </div>
+ 
+  
     <form class="container" id="form">
         <div class="form-group">
           <label for="exampleFormControlInput1">Enter Name</label>
@@ -51,6 +46,11 @@
         <div id="button"> <button type="submit" class="btn btn-primary mb-2" id="btn">Submit</button></div>
     </form>
 
+    <footer> This is a footer </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/js/script1.js"></script>
+</body>
+</html>
     <footer> This is a footer </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/js/script1.js"></script>
