centered form on index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible">
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
 
-<body>
-  <header class="container-fluid">It's written in the stars</header>
+<body class="h-100">
+  <header class="container-fluid" style="margin-bottom: 50px">It's written in the stars</header>
   <div class="background-container">
     <img class="moon2" src="assets/images/moon-png-44673.png" alt="">
     <div class="stars"></div>
@@ -19,7 +19,11 @@
     <div class="clouds"></div>
   </div>
  
-  
+  <!-- Center form -->
+  <div class="container h-110">
+    <div class="row h-100 justify-content-center align-items-center">
+        <div class="col-10 col-md-8 col-lg-6">
+  <!-- Form -->
     <form class="container" id="form">
         <div class="form-group">
           <label for="exampleFormControlInput1">Enter Name</label>
@@ -45,13 +49,8 @@
         </div>
         <div id="button"> <button type="submit" class="btn btn-primary mb-2" id="btn">Submit</button></div>
     </form>
+    <!-- End of form -->
 
-    <footer> This is a footer </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/js/script1.js"></script>
-</body>
-</html>
-    <footer> This is a footer </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/js/script1.js"></script>
 </body>
