fixed error in index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="container h-110">
     <div class="row h-100 justify-content-center align-items-center">
         <div class="col-10 col-md-8 col-lg-6">
-  <!-- Form -->
+   <!-- Form -->
     <form class="container" id="form">
         <div class="form-group">
           <label for="exampleFormControlInput1">Enter Name</label>
@@ -49,6 +49,9 @@
         </div>
         <div id="button"> <button type="submit" class="btn btn-primary mb-2" id="btn">Submit</button></div>
     </form>
+    </div>
+    </div>
+   </div>
     <!-- End of form -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
