amended button and css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>☆ it's written in the stars ☆</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
 
 <body class="h-100">
-  <header class="container-fluid" style="margin-bottom: 50px">It's written in the stars</header>
+  <header class="container-fluid" style="margin-bottom: 50px">it's written in the stars</header>
   <div class="background-container">
     <img class="moon2" src="assets/images/moon-png-44673.png" alt="">
     <div class="stars"></div>
@@ -19,6 +19,11 @@
     <div class="clouds"></div>
   </div>
  
+  <div class="container-fluid tagline"  style="margin-bottom: 50px">what does your daily horoscope have in store? <p>enter your name and star sign below to find out your destiny...</p>
+  
+  </div>
+
+
   <!-- Center form -->
   <div class="container h-110">
     <div class="row h-100 justify-content-center align-items-center">
@@ -47,7 +52,17 @@
             <option value="Pisces">Pisces</option>
           </select>
         </div>
-        <div id="button"> <button type="submit" class="btn btn-primary mb-2" id="btn">Submit</button></div>
+        <div id="button"> 
+        
+          <button class="a-n2" id="btn" type="submit" class="btn btn-outline-light">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          submit
+          
+          </button>
+    </div>
     </form>
     </div>
     </div>
