--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
 <body class="h-100">
-  <header class="container-fluid" style="margin-bottom: 50px">it's written in the stars</header>
+  <header class="container-fluid" id="indexHeader">it's written in the stars</header>
   <div class="background-container">
     <img class="moon2" src="assets/images/moon-png-44673.png" alt="">
     <div class="stars"></div>
@@ -19,7 +19,7 @@
     <div class="clouds"></div>
   </div>
  
-  <div class="container-fluid tagline"  style="margin-bottom: 50px">what does your daily horoscope have in store? <p>enter your name and star sign below to find out your destiny...</p>
+  <div class="container-fluid tagline">☆ what does your daily horoscope have in store? ☆<p>enter your name and star sign below to find out your destiny...</p>
   
   </div>
 
@@ -31,11 +31,11 @@
    <!-- Form -->
     <form class="container" id="form">
         <div class="form-group">
-          <label for="exampleFormControlInput1">Enter Name</label>
-          <input type="text" class="form-control" id="nameInput" placeholder="Enter your name here">
+          <label for="exampleFormControlInput1">enter name</label>
+          <input type="text" class="form-control" id="nameInput" placeholder="enter your name here">
         </div>
         <div class="form-group">
-          <label for="exampleFormControlSelect1">Choose your star sign</label>
+          <label for="exampleFormControlSelect1">choose your star sign</label>
           <select class="form-control" id="starSigns">
             
             <option value="Aries">Aries</option>
